# minecli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
minecli/: __main__.py  minecli.py
tests/: test_minecli.py
