[tool.poetry]
name = "minecli"
version = "0.1.2"
description = "Unofficial Minecraft cli utils"
authors = ["Manuel Quarneti <manuelquarneti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
minelib = "0.1.8"
click = "^7.1.2"
appdirs = "^1.4.4"

pyinstaller = { version = "^4.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
